package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "pulsescan-cpp",
    srcs = [
        "src/main.cpp",
        "src/core/app.cpp",
        "src/core/cli.cpp",
        "src/core/logging.cpp",
        "src/core/output.cpp",
        "src/core/ping_loop.cpp",
        "src/core/ports.cpp",
        "src/core/resolve.cpp",
        "src/core/scan_runner.cpp",
        "src/core/status.cpp",
        "src/net/icmp_packet.cpp",
        "src/net/icmp_ping.cpp",
        "src/net/icmp_scan.cpp",
        "src/net/scan_tcp.cpp",
        "src/net/scan_udp.cpp",
        "src/net/udp_probes.cpp",
        "src/platform/sandbox_landlock.cpp",
    ],
    copts = [
        "-std=c++20",
        "-pthread",
        "-DBOOST_ASIO_DISABLE_SSL",
        "-DPROJECT_VERSION=\\\"1.0.0-bazel\\\"",
    ],
    includes = ["src"],
    linkopts = [
        "-lboost_system",
        "-pthread",
    ],
)

